# angry-aim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/models/map1/: Map1.mtl
assets/models/target1/: Target1.mtl
glad/include/glad/: glad.h
glad/src/: glad.c
src/: Application.cpp  Application.h  DebugInfo.cpp  DebugInfo.h  main.cpp
src/inc/: inc_glfw.h  inc_glm.h
src/lib/: stb_image.h
src/render/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderFont.cpp  RenderFont.h  RenderScene.cpp  RenderScene.h  RenderSceneDefault.cpp  RenderSceneDefault.h  RenderUi.cpp  RenderUi.h
src/scene/: Scene.cpp  Scene.h  SceneBackpack.cpp  SceneBackpack.h  SceneDefault.cpp  SceneDefault.h
src/scene/default/: SceneDefault.cpp  SceneDefault.h
src/screens/: ScreenIngame.cpp  ScreenIngame.h  ScreenMain.cpp  ScreenMain.h  ScreenScene.cpp  ScreenScene.h  ScreenSettings.cpp  ScreenSettings.h
src/ui/: Button.cpp  Button.h  Cell.h  Column.cpp  Column.h  Label.cpp  Label.h  Row.cpp  Row.h  Ui.cpp  Ui.h  UiEvent.cpp  UiEvent.h  components.h
src/util/: math_util.h  time_util.h
src/world/: Entity.h  World.h
src/world/entities/: Cube.cpp  Cube.h  MainPlayer.cpp  MainPlayer.h  StrafingTarget.cpp  StrafingTarget.h
